--- a/app/src/main/res/layout/activity_deskription.xml
+++ b/app/src/main/res/layout/activity_deskription.xml
@@ -8,16 +8,16 @@
     android:id="@+id/deskripsion">
 
     <ImageView
-        android:id="@+id/imgFotoMakanan"
-        android:layout_width="414dp"
-        android:layout_height="181dp"
+        android:id="@+id/FotoMakanan"
+        android:layout_width="212dp"
+        android:layout_height="162dp"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.028"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -25,13 +25,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="60dp"
         android:text="Nama Kuliner"
         android:textColor="#000000"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintHorizontal_bias="0.937"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,8 +39,8 @@
         android:id="@+id/txtDeskripsiMakanan"
         android:layout_width="375dp"
         android:layout_height="107dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="20dp"
         android:text="deskripsi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNamaMakanan" />
@@ -51,18 +51,11 @@
         android:layout_height="21dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/txtDeskripsiMakanan"
-        app:layout_constraintVertical_bias="0.046" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="63dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:text="Harga : "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.854"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDeskripsiMakanan" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNamaMakanan"
+        app:layout_constraintVertical_bias="0.033" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
