--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="10dp"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Menu Masakan Padang"
-        android:textAlignment="center"
-        android:textColor="#000000"
+        android:paddingLeft="10dp"
+        android:text="Menu Burjo Idaman"
+        android:textColor="@color/biru"
         android:textSize="24sp"
         android:textStyle="bold" />
 
